--- a/app/src/pwbStaging/res/values/strings.xml
+++ b/app/src/pwbStaging/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name" translatable="false">PowerBuy Staging</string>
     <string name="watermark_business" translatable="false">PowerBuy</string>
     <string name="watermark_environment" translatable="false">Staging(headless)</string>
+    <string name="hostname_deep_link" translatable="false">staging-fe.powerbuy.co.th</string>
 </resources>
