EO-330 [CDS] - Implement CDS theme and APIs based on e-Ordering v1.1.2

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -56,7 +56,7 @@
     <string name="add_to_cart">ใส่รถเข็น</string>
     <string name="tab_promotion">โปรโมชั่นและของแถม</string>
     <string name="tab_delivery">ตัวเลือกการจัดส่ง</string>
-    <string name="size">ไซต์:</string>
+    <string name="size">ไซต์</string>
     <string name="shade">สี:</string>
     <string name="add_one_hour_item">รับที่ร้านใน 1 ชม.</string>
 
