--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="add_to_cart">Add to cart</string>
     <string name="tab_promotion">Promotion</string>
     <string name="tab_delivery">Arrange Delivery</string>
-    <string name="size">Size:</string>
+    <string name="size">Size</string>
     <string name="shade">Shade:</string>
     <string name="add_one_hour_item">1H Pick up</string>
 
