--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -352,4 +352,5 @@
     <string name="share_line">ไลน์</string>
     <string name="copied_to_clipboard">copied to clipboard!</string>
     <string name="share_copy">คัดลอก</string>
+    <string name="cannot_display_history">ไม่สามารถเปิดประวัติรายการนี้ได้</string>
 </resources>
