--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -352,4 +352,6 @@
     <string name="copied_to_clipboard">copied to clipboard!</string>
     <string name="share_copy">Copy</string>
     <string name="cannot_display_history">Can’t open this history</string>
+    <string name="sold_by">Sold by:</string>
+    <string name="free_item">Free items with this product</string>
 </resources>
