--- a/app/src/cdsRelease/res/values/strings.xml
+++ b/app/src/cdsRelease/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="watermark_business" translatable="false">Central Department Store</string>
     <string name="watermark_environment" translatable="false">Production(headless)</string>
     <string name="hostname_deep_link" translatable="false">central.co.th</string>
+    <string name="sold_by_title">Sold by:</string>
 </resources>
