--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,7 +148,7 @@
     <string name="place_or_building">Place/Building</string>
     <string name="soi">Soi</string>
     <string name="street">Street</string>
-    <string name="tel_or_mobile">Tel/Mobile no.</string>
+    <string name="contact_number_reserve">Contact Number (Reserve)</string>
     <string name="province">Province</string>
     <string name="district">District</string>
     <string name="sub_district">Sub District</string>
@@ -241,6 +241,7 @@
     <string name="error_form_password_too_short">Password must be at least %d characters</string>
     <string name="error_form_confirmation_password_not_matched">Passwords do not match.</string>
     <string name="error_form_phone_number_invalid">Invalid phone no.</string>
+    <string name="error_form_contact_number_invalid">Please enter the correct number e.g. 08xxxxxxxx, 02xxxxxxx</string>
     <string name="error_form_has_special">Information can not be special symbols</string>
     <string name="error_form_name">First or last name must not contain numbers or symbols.</string>
     <string name="error_form_password_not_correctly">at least 9 characters: uppercase,lowercase,numerics</string>
