--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -237,6 +237,7 @@
 
     <!-- Error -->
     <string name="error_form_empty_data">กรุณากรอกข้อมูลสำคัญของคุณ</string>
+    <string name="error_form_input_required">กรุณากรอกข้อมูลที่จำเป็น</string>
     <string name="error_form_email_pattern_not_match">อีเมลต้องอยู่ในรูปแบบ example@mail.com</string>
     <string name="error_form_password_too_short">รหัสผ่านต้องมากกว่า %d ตัวอักษร</string>
     <string name="error_form_confirmation_password_not_matched">ยืนยันรหัสผ่านไม่ถูกต้อง</string>
