--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -365,5 +365,6 @@
     <string name="pay_now">ชำระเงิน</string>
     <string name="order_click_bill_description">กดเพื่อส่งบาร์โค้ดให้แก่ลูกค้า</string>
     <string name="pay_bill">จ่ายบิล</string>
+    <string name="pay_by_bank_transfer">ชำระค่าสินค้า โอนเงินผ่านสาขาธนาคาร</string>
 
 </resources>
