--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -377,5 +377,6 @@
     <string name="terms_conditions">ข้อกำหนดและเงื่อนไข</string>
     <string name="acknowledged">และรับทราบ</string>
     <string name="privacy">นโยบายความเป็นส่วนตัว</string>
+    <string name="available_here">Available Here</string>
 
 </resources>
