--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,5 +376,5 @@
     <string name="terms_conditions">Terms and Conditions</string>
     <string name="acknowledged">and acknowledged the</string>
     <string name="privacy">Privacy Policy.</string>
-    <string name="available_here">Available Here</string>
+    <string name="available_here">Available in this store</string>
 </resources>
