--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -377,6 +377,9 @@
     <string name="terms_conditions">ข้อกำหนดและเงื่อนไข</string>
     <string name="acknowledged">และรับทราบ</string>
     <string name="privacy">นโยบายความเป็นส่วนตัว</string>
+
+    <!--  Available Here  -->
     <string name="available_here">มีขายที่สาขานี้</string>
+    <string name="available_here_plp">มีขายที่สาขานี้</string>
 
 </resources>
