--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -58,6 +58,7 @@
     <string name="size">ไซต์</string>
     <string name="shade">สี:</string>
     <string name="add_one_hour_item">รับที่ร้านใน 1 ชม.</string>
+    <string name="compare_cleared">ลบรายการเปรียบเทียบแล้ว</string>
 
     <!-- Compare -->
     <string name="compare_header">เปรียบเทียบสินค้า</string>
