--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="format_add_more_to_compare">Add more to compare (%s/4)</string>
     <string name="compare_clear_all">Clear all</string>
     <string name="format_compare_products">Compare Product (%s/4)</string>
+    <string name="compare_cleared">Compare list is cleared.</string>
 
     <!-- Search -->
     <string name="clear_history">Clear History</string>
