EOR-23 Display marketplace items

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -108,25 +108,6 @@
     <string name="fri">ศ</string>
     <string name="sat">ส</string>
     <string name="last_date">30</string>
-    <!--<string name="time_9am_to_half_9am">09:00 - 09:30</string>-->
-    <!--<string name="time_half_9am_to_10am">09:30 - 10:00</string>-->
-    <!--<string name="time_10am_to_half_10am">10:00 - 10:30</string>-->
-    <!--<string name="time_half_10am_to_11am">10:30 - 11:00</string>-->
-    <!--<string name="time_11am_to_half_11am">11:00 - 11:30</string>-->
-    <!--<string name="time_half_11am_to_12pm">11:30 - 12:00</string>-->
-    <!--<string name="time_1pm_to_half_1pm">13:00 - 13:30</string>-->
-    <!--<string name="time_half_1pm_to_2pm">13:30 - 14:00</string>-->
-    <!--<string name="time_2pm_to_half_2pm">14:00 - 14:30</string>-->
-    <!--<string name="time_half_2pm_to_3pm">14:30 - 15:00</string>-->
-    <!--<string name="time_3pm_to_half_3pm">15:00 - 15:30</string>-->
-    <!--<string name="time_half_3pm_to_4pm">15:30 - 16:00</string>-->
-    <!--<string name="time_4pm_to_half_4pm">16:00 - 16:30</string>-->
-    <!--<string name="time_half_4pm_to_5pm">16:30 - 17:00</string>-->
-    <!--<string name="time_5pm_to_half_5pm">17:00 - 17:30</string>-->
-    <!--<string name="time_half_5pm_to_6pm">17:30 - 18:00</string>-->
-    <!--<string name="time_6pm_to_half_6pm">18:00 - 18:30</string>-->
-    <!--<string name="time_half_6pm_to_7pm">18:30 - 19:00</string>-->
-    <!--<string name="time_7pm_to_half_7pm">19:00 - 19:30</string>-->
 
     <!--API-->
     <!--<string name="product_list">items[id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,brand]],total_count</string>-->
@@ -382,4 +363,6 @@
     <string name="acknowledged">และรับทราบ</string>
     <string name="privacy">นโยบายความเป็นส่วนตัว</string>
 
+    <string name="sold_by_title">จำหน่ายโดย:</string>
+    <string name="free_item">ฟรีของแถม</string>
 </resources>
