--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -384,5 +384,11 @@
     <!--  Payment Order Detail  -->
     <string name="label_order_total">Order Total</string>
     <string name="view_order_detail">View Details</string>
+    <string name="label_order_details">Payment Details</string>
+    <string name="label_total">Total</string>
+    <string name="label_discount">Discount</string>
+    <string name="label_order_promotion_code">Promotion Code</string>
+    <string name="label_order_shipping_fee">Shipping Fee</string>
+    <string name="not_found_shipping_amount">ยังไม่ได้คำนวณ</string>
 
 </resources>
