EOR-109 Updated order details bottom sheet show full screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -390,5 +390,6 @@
     <string name="label_order_promotion_code">Promotion Code</string>
     <string name="label_order_shipping_fee">Shipping Fee</string>
     <string name="not_found_shipping_amount">ยังไม่ได้คำนวณ</string>
+    <string name="label_your_order_detail">Your Order Details</string>
 
 </resources>
