--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,6 +382,7 @@
     <string name="privacy">Privacy Policy.</string>
 
     <!--  Payment Order Detail  -->
+    <string name="label_items">%d Item(s)</string>
     <string name="label_order_total">Order Total</string>
     <string name="view_order_detail">View Details</string>
     <string name="hide_order_detail">Hide Details</string>
@@ -390,7 +391,7 @@
     <string name="label_discount">Discount</string>
     <string name="label_order_promotion_code">Promotion Code</string>
     <string name="label_order_shipping_fee">Shipping Fee</string>
-    <string name="not_found_shipping_amount">ยังไม่ได้คำนวณ</string>
+    <string name="not_found_shipping_amount">Not yet calculated</string>
     <string name="label_your_order_detail">Your Order Details</string>
 
 </resources>
