--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,7 +279,7 @@
     <string name="select_store_dialog">Collect</string>
     <string name="title_clear_cart">There is problem with current shopping cart (cart will be re-generated).</string>
     <string name="developing_system_compare">Compare feature is temporary unavailable.</string>
-    <string name="freebie_promotion_not_found">Please check promotion or free item when added item to cart</string>
+    <string name="freebie_promotion_not_found">No promotion for this product</string>
     <string name="not_have_day_to_delivery">Sorry, there is no available slot.</string>
     <string name="next_step">How to do next?</string>
     <string name="staff_descriptions">1. You will receive order confirmation email\n2. Show that email OR this screen OR order number to our staff at payment cashier.\n3. Pay at the cashier. You will get a receipt from our staff.</string>
