EOR-45 Display freebie

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -381,5 +381,6 @@
     <string name="terms_conditions">ข้อกำหนดและเงื่อนไข</string>
     <string name="acknowledged">และรับทราบ</string>
     <string name="privacy">นโยบายความเป็นส่วนตัว</string>
+    <string name="get_free_item">รับฟรีของแถม:</string>
 
 </resources>
