EOR-45 Fix check freebie out of stock

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,8 +279,6 @@
     <string name="select_store_dialog">Collect</string>
     <string name="title_clear_cart">There is problem with current shopping cart (cart will be re-generated).</string>
     <string name="developing_system_compare">Compare feature is temporary unavailable.</string>
-    <string name="freebie_promotion_not_found">No promotion for this product</string>
-    <string name="freebie_out_of_stock">Out of stock</string>
     <string name="not_have_day_to_delivery">Sorry, there is no available slot.</string>
     <string name="next_step">How to do next?</string>
     <string name="staff_descriptions">1. You will receive order confirmation email\n2. Show that email OR this screen OR order number to our staff at payment cashier.\n3. Pay at the cashier. You will get a receipt from our staff.</string>
@@ -321,7 +319,6 @@
     <!-- Custom calendar -->
     <string name="product_delivery">Delivery / Warranty / Refund</string>
     <string name="full">FULL</string>
-    <string name="free">FREE</string>
 
     <!-- Payment -->
     <string name="select_payment_types">Select a payment method</string>
@@ -381,6 +378,11 @@
     <string name="terms_conditions">Terms and Conditions</string>
     <string name="acknowledged">and acknowledged the</string>
     <string name="privacy">Privacy Policy.</string>
-    <string name="get_free_item">รับฟรีของแถม:</string>
+
+    <!--  Promotion freebie  -->
+    <string name="get_free_item">Free items with this product:</string>
+    <string name="free">FREE</string>
+    <string name="freebie_promotion_not_found">No promotion for this product</string>
+    <string name="freebie_out_of_stock">OUT OF STOCK</string>
 
 </resources>
