EOR-159 Can select filter option

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -391,4 +391,9 @@
     <string name="freebie_promotion_not_found">ไม่มีโปรโมชั่นสำหรับสินค้าชิ้นนี้</string>
     <string name="freebie_out_of_stock">สินค้าหมด</string>
 
+    <!--  Filter  -->
+    <string name="filter_cancel">X</string>
+    <string name="filter_by">ตัวกรอง</string>
+    <string name="reset_filter">รีเซต</string>
+    <string name="format_add_filter">ตกลง (%d สินค้า)</string>
 </resources>
