--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -410,4 +410,10 @@
     <string name="freebie_promotion_not_found">No promotion for this product</string>
     <string name="freebie_out_of_stock">OUT OF STOCK</string>
 
+    <!--  Filter  -->
+    <string name="filter_cancel">X</string>
+    <string name="filter_by">Filter by</string>
+    <string name="reset_filter">Reset</string>
+    <string name="format_add_filter">Apply (%d items)</string>
+
 </resources>
