--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -391,4 +391,8 @@
     <string name="freebie_promotion_not_found">ไม่มีโปรโมชั่นสำหรับสินค้าชิ้นนี้</string>
     <string name="freebie_out_of_stock">สินค้าหมด</string>
 
+    <!-- Credit card on top -->
+    <string name="credit_card_on_top">รูดบัตรลดเพิ่ม</string>
+    <string name="warning_credit_care_on_top">ในรถเข็นมีสินค้าที่ร่วมโปรโมชั่นบัตรเครดิตที่ต่างกันอยู่ กรุณาแยกทำรายการเพื่อรับโปรโมชั่นดังกล่าว</string>
+
 </resources>
