--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -396,4 +396,10 @@
     <string name="filter_by">ตัวกรอง</string>
     <string name="reset_filter">รีเซต</string>
     <string name="format_add_filter">ตกลง (%d สินค้า)</string>
+
+    <!--  Credit Card Promotion  -->
+    <string name="select_credit_card_promotion">เลือกบัตรเครดิต</string>
+    <string name="default_credit_card_promotion">ธนาคารอื่นๆ</string>
+    <string name="format_credit_card_promotion">รับส่วนลดทันที %d%%</string>
+
 </resources>
